fix: fixed height style on mobile

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -7,7 +7,7 @@ body {
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background-size: cover;
   background-position: center;
 }
